--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -1,7 +1,7 @@
 {
   "meta": {
-    "username": "put your username here",
-    "repositoryName": "put your repository name here",
+    "username": "zhqstar",
+    "repositoryName": "zhqstar.github.io",
     "branch": "master"
   },
   "theme": {
