Update configuration file

--- a/hubpress/config.json
+++ b/hubpress/config.json
@@ -5,6 +5,26 @@
     "branch": "master"
   },
   "theme": {
-    "name": "Casper"
+    "name": "casper"
+  },
+  "urls": {
+    "site": "https://zhqstar.github.io",
+    "hubpress": "https://zhqstar.github.io",
+    "theme": "//zhqstar.github.io/themes/casper",
+    "images": "https://zhqstar.github.io/images"
+  },
+  "initialisationConfigComponent": {
+    "name": "initialise-configuration",
+    "computed": {},
+    "methods": {},
+    "staticRenderFns": [
+      null,
+      null,
+      null
+    ],
+    "_compiled": true,
+    "beforeCreate": [
+      null
+    ]
   }
 }
